@@ -1,5 +1,8 @@
 2010-04-08 S. Thiell <stephane.thiell@cea.fr>
 
+	* NodeSet.py: Added __getstate__() and __setstate__() methods to support
+	pickling of NodeSet objects.
+
 	* scripts/clush.py: Add option flag -n NAMESPACE to specify groups.conf(5)
 	namespace to use for regrouping displayed nodeset.
 
